<resources>
    <string name="app_name">Project Two: Cory Remick</string>
    <string name="item_content_desc">Event Item</string>
    <string name="item_name_placeholder">Event</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="register_success">"Account created "</string>
    <string name="event_header">"Upcoming Events</string>
    <string name="action_add_event">Add Event</string>
    <string name="event_name">Name</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_location">Location</string>
    <string name="event_name_hint">Enter event name</string>
    <string name="event_date_hint">Enter event date</string>
    <string name="event_time_hint">Enter event time</string>
    <string name="event_location_hint">Enter event location</string>
    <string name="action_enable_notifications">Receive Notifications</string>
    <string name="permission_enable">Enable</string>
    <string name="notification_permission">Permission is required to enable notifications from this application. By clicking continue you will be prompted by the system to grant permission.</string>
    <string name="action_cancel_permission">Cancel</string>
    <string name="upcoming_events_fail">Failed to get upcoming events</string>
    <string name="title_activity_event_model_detail_host">EventModelDetailHostActivity</string>
    <string name="title_eventmodel_list">Events</string>
    <string name="title_eventmodel_detail">EventModel Detail</string>
    <string name="save">Save</string>
    <string name="delete_error">Error deleting event</string>
</resources>